force-app/main/default/objects/Trigger_Bypass__c/Trigger_Bypass__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to control trigger execution.</description>
    <label>Trigger Bypass</label>
</CustomObject>