force-app/main/default/objects/Trigger_Bypass__c/fields/ContactTrigger__c.field-meta.xml
<CustomField>
    <fullName>ContactTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Control contact tirgger execution.</description>
    <label>ContactTrigger</label>
    <type>Checkbox</type>
</CustomField>