force-app/main/default/objects/Trigger_Bypass__c/fields/OrderTrigger__c.field-meta.xml
<CustomField>
    <fullName>OrderTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to control execution of order trigger.</description>
    <label>OrderTrigger</label>
    <type>Checkbox</type>
</CustomField>