force-app/main/default/objects/Trigger_Bypass__c/fields/PointLedgerTrigger__c.field-meta.xml
<CustomField>
    <fullName>PointLedgerTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to control execution of Point_Ledger__c trigger.</description>
    <label>PointLedgerTrigger</label>
    <type>Checkbox</type>
</CustomField>